--- a/css/main.css
+++ b/css/main.css
@@ -371,6 +371,7 @@ input[type=radio]:checked + .upload-effect-label .upload-effect-preview {
 .upload-effect-level-pin {
   position: absolute;
   top: 50%;
+  z-index: 2;
 
   width: 18px;
   height: 18px;
@@ -384,6 +385,7 @@ input[type=radio]:checked + .upload-effect-label .upload-effect-preview {
 
 .upload-effect-level-val {
   position: absolute;
+  z-index: 1;
 
   width: 20%;
   height: 100%;
